--- a/index.html
+++ b/index.html
@@ -12,27 +12,20 @@
 </head>
 
 <body>
-
-  <header>
-    <figure class="header__logo"></figure>
-    <a href="https://github.com/daniektj/Glass-Morphism-Generator" role="button" title="Give us a Star" class="header_github">Star on GitHub</a>
-  </header>
-
   <section class="hero" id="hero">
     <figure class="arrows left" id="arrow_left" title="Change background"></figure>
     <div class="glass-container" id="glass">
       <figure class="glass-container__profile" id="profile"></figure>
       <div class="glass-container__text" id="text">
-        <h2 id="glass_title">Glass Morphism</h2>
-        <p id="lorem_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-          been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-          and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-          electronic typesetting.</p>
+        <h2 id="glass_title">你说我是谁</h2>
+        <p id="lorem_text">1. 熬夜锦标赛冠军。2. 已读不回专业户。3. 黑眼圈届的达人。4. 当代自我否认先驱。5. 幼儿园抢饭第一名。6. 脱贫大赛形象代言人。7. 夜宵外卖一品鉴赏师。8.
+          宇宙一级潜在鸽王。9. 赖床锦标赛冠军得主。10. 拖延俱乐部顶级VIP。11. 快乐星球持证驾驶员。12. 非知名啥也不‌是网红。13. 小道消息专业接线员。14. 著名电影电视剧观众。15.
+          再来一瓶未来获奖者。16. 秃头选拔赛形象大使。17. 健忘症医学研究志愿者。18. 修图照骗大赛常驻嘉宾。19. 知名做白日梦研究专家。20. 擅长才艺表演：说废话。21. 可爱又迷人的反派角色。
+          </p>
       </div>
     </div>
     <figure class="arrows right" id="arrow_right" title="Change background"></figure>
   </section>
-
   <section class="controls-section">
     <div class="controls-container">
 
@@ -126,7 +119,7 @@
 
   <div id="demo-modal" class="modal">
     <div class="modal__content">
-  
+
       <span class="code_title">HTML</span>
       <pre>
         <div class="button_container">
@@ -148,10 +141,10 @@
 
   <footer>
     <div class="footer-links">
-        <a href="https://www.buymeacoffee.com/glassgenerator" target="_blank" role="button" class="coffee"></a>
-        <div class="devs_twitter">
-          <a class="footer_twitter" href="http://www.twitter.com/daniektj" role="button" title="Follow Me">DaniekTj</a>
-          <a class="footer_twitter" href="http://www.twitter.com/MariwRios" role="button" title="Follow Me">MariwRios</a>
+      <a href="https://www.buymeacoffee.com/glassgenerator" target="_blank" role="button" class="coffee"></a>
+      <div class="devs_twitter">
+        <a class="footer_twitter" href="http://www.twitter.com/daniektj" role="button" title="Follow Me">DaniekTj</a>
+        <a class="footer_twitter" href="http://www.twitter.com/MariwRios" role="button" title="Follow Me">MariwRios</a>
       </div>
     </div>
   </footer>
